
* ``bzr status`` now displays a summary of existing shelves after
  the other status information. This is done using a ``post_status``
  hook.
  (Parth Malwankar, #403687)

Bug Fixes
*********

* ``bzr break-lock --force`` breaks the lock without prompting.  (Before
  using this, make sure the process holding the lock really is dead.)
  (Martin Pool, #392315)

* Print junk rather than throwing a UnicodeDecodeError from ``bzr version-info``
  when using the rio format (with non-ascii information) on a non-utf-8 terminal.
  (Andrej A Antonov, #518609)

* Skip tests that needs a bzr source tree when there isn't one. This is
  needed to succesfully run the test suite for installed versions.
  (Vincent Ladeuil, #644855).

* Skip the tests that requires respecting the chmod bits when running as root.
  (Vincent Ladeuil, #646133)

* ``unshelve --preview`` now can show diff in a non-ascii encoding.
  (Andrej A Antonov, #518916)

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

* Small change to GroupCompressBlock to work more in terms of 'chunks'
  rather than 'content' for its compressed storage. (John Arbash Meinel)

* When running ``bzr selftest --subunit`` the subunit stream will no
  longer include the "log" information for tests which are considered to
  be 'successes' (success, xfail, skip, etc) (John Arbash Meinel)

Testing
*******

* Fix tests that failed when run under ``LANG=C``.
  (Andrew Bennetts, #632387)

* Use tests.TestCaseInTempDir for tests that requires disk resources.
  (Vincent Ladeuil, #650001)

bzr 2.3b1
#########

:2.3b1: 2010-09-20

This is the first beta of the 2.3 series, leading up to a 2.3.0
release in January or February.  Beta releases are suitable for everyday use
but may cause some incompatibilities with plugins.  Some plugins may need
small updates to work with 2.3b1.

2.3b1 includes some performance improvements in both speed and memory